Implement JWT authentication filter and security exception handling